--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CLOUDINARY_CLOUD_NAME=db1z6kun7
-CLOUDINARY_API_KEY=594219869245985
-CLOUDINARY_API_SECRET=lVwsbou3l9NRwpeSqYigdTN_pyc
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
