--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "google-translate-api-x": "^10.7.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
